// Vitest Snapshot v1

exports[`author rpc > works 1`] = `
[
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "ready": null,
      },
      "txHash": "0x379a84a326f2abe840fc3b54db762da86f60c31b20f7d81d15cc5ffb7dc995be",
      "txIndex": undefined,
    },
  ],
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "finalized": "0xeefde1ec4bb9834c9282bdaa2034a1f603ef931b70c25caaa5a97f1fb2720fd5",
      },
      "txHash": "0x379a84a326f2abe840fc3b54db762da86f60c31b20f7d81d15cc5ffb7dc995be",
      "txIndex": 1,
    },
  ],
]
`;

exports[`author rpc > works 2`] = `
{
  "block": {
    "extrinsics": [
      "0x280401000b207230268401",
      "0x3102840088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00f7b92e81c4c3678cf2bd0ce0774782709b8792d46abcb381c5617fd79550a7b3a0d0cd858419dbadbb4e763960b710e2265e0d21bf33ba1009184859d9618d06040100000a0000d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae699101",
    ],
    "header": {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0xe1cf470800000000",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0x46e076a482debb2fe5d839f642f585570e9178620d731de559515666b95dda10eb4736d397e98b64afe66f2dbf7e1a3a6eeb394aa2cf9b5317e7dfcff0614e8f",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 189521,
      "parentHash": "0x062327512615cd62ea8c57652a04a6c937b112f1410520d83e2fafb9776cdbe1",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  },
  "justifications": null,
}
`;

exports[`author rpc > works 3`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 4984785197475,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 4`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000100,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 5`] = `
[
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "ready": null,
      },
      "txHash": "0x7a50dcf54f3f69a233ef03fd835b26b414c2892ccc0aad4f5b1a7b7407dbb16b",
      "txIndex": undefined,
    },
  ],
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "finalized": "0x0a88e86168da4aa27a33f9273b34bba3dbef86bd7b246e831333c83a8d38f975",
      },
      "txHash": "0x7a50dcf54f3f69a233ef03fd835b26b414c2892ccc0aad4f5b1a7b7407dbb16b",
      "txIndex": 1,
    },
  ],
]
`;

exports[`author rpc > works 6`] = `
{
  "block": {
    "extrinsics": [
      "0x280401000b40c030268401",
      "0x3102840088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00ac0122165c15db54e67d09a8f7aa0651c39c80bc775483f15a06dab12f7214019d6ae60ef92f4218819d4ddd2e2726bf500e82e405de7306aecbd6959701ef08140104000a0000d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae692103",
    ],
    "header": {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0xe3cf470800000000",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0x46e076a482debb2fe5d839f642f585570e9178620d731de559515666b95dda10eb4736d397e98b64afe66f2dbf7e1a3a6eeb394aa2cf9b5317e7dfcff0614e8f",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 189522,
      "parentHash": "0xeefde1ec4bb9834c9282bdaa2034a1f603ef931b70c25caaa5a97f1fb2720fd5",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  },
  "justifications": null,
}
`;

exports[`author rpc > works 7`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 4984785197475,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 8`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000100,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 9`] = `
[
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "ready": null,
      },
      "txHash": "0xd56f14739289e8b4e93b208fbb16076d682139e4b09304a811d7d065318412d1",
      "txIndex": undefined,
    },
  ],
  [
    SubmittableResult {
      "dispatchError": undefined,
      "dispatchInfo": undefined,
      "events": [],
      "internalError": undefined,
      "status": {
        "finalized": "0xeaf40e1042a99e9c20fa0b03d0806ce738885597e5ef204dbdf6f325ad905c9e",
      },
      "txHash": "0xd56f14739289e8b4e93b208fbb16076d682139e4b09304a811d7d065318412d1",
      "txIndex": 1,
    },
  ],
]
`;

exports[`author rpc > works 10`] = `
{
  "block": {
    "extrinsics": [
      "0x280401000b600e31268401",
      "0x3102840088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00382223470912adf1cd1cdeb094097acc7fc4a8688ae9e1f251efefa6ba671314c85561f4cfe45e329ae4a3979f1a9b9ef21473757945fa471edbdc75865eb40b240104000a0000d17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69b104",
    ],
    "header": {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0xe5cf470800000000",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0x46e076a482debb2fe5d839f642f585570e9178620d731de559515666b95dda10eb4736d397e98b64afe66f2dbf7e1a3a6eeb394aa2cf9b5317e7dfcff0614e8f",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 189523,
      "parentHash": "0x0a88e86168da4aa27a33f9273b34bba3dbef86bd7b246e831333c83a8d38f975",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  },
  "justifications": null,
}
`;

exports[`author rpc > works 11`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 4984785197475,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`author rpc > works 12`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000100,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;
